Ensure no scrollbar shows due to small screen

--- a/argo-lite/src/styles/index.css
+++ b/argo-lite/src/styles/index.css
@@ -25,6 +25,7 @@ html {
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .app-wrapper {
